Fixed (?) formatting bug where the page header would be truncated even if there was sufficient space

--- a/silico/data/static/css/page_header.css
+++ b/silico/data/static/css/page_header.css
@@ -38,4 +38,6 @@ header {
     text-overflow: ellipsis;
     padding-left: 15px;
     padding-right: 15px;
+    width: 100%;
+    text-align: center;
 }
